exports[`Game Component should match the snapshot 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 1,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Alice",
        "wins": 0,
        "yellows": 0,
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 3,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Bob",
        "wins": 0,
        "yellows": 0,
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 1,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Alice",
        "wins": 0,
        "yellows": 0,
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 3,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Bob",
        "wins": 0,
        "yellows": 0,
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={false}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;

exports[`Game Component should open the game modal when clicked 2`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
  onClick={[Function]}>
  <GameDetails
    game={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "id": 2,
        "p1": 1,
        "p1OnGoal": null,
        "p1Poss": null,
        "p1Reds": 0,
        "p1Score": null,
        "p1Shots": null,
        "p1Yellows": 0,
        "p2": 3,
        "p2OnGoal": null,
        "p2Poss": null,
        "p2Reds": 0,
        "p2Score": null,
        "p2Shots": null,
        "p2Yellows": 0,
        "status": "created",
        "tournament": 1,
        "updatedAt": null,
      }
    }
    player1={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 1,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Alice",
        "wins": 0,
        "yellows": 0,
      }
    }
    player2={
      Object {
        "createdAt": "2016-12-25T19:31:48",
        "draws": 0,
        "goalsAgainst": 0,
        "goalsFor": 0,
        "id": 3,
        "isTeam": 0,
        "losses": 0,
        "onGoal": 0,
        "possession": 0,
        "reds": 0,
        "shots": 0,
        "updatedAt": null,
        "username": "Bob",
        "wins": 0,
        "yellows": 0,
      }
    } />
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "modals": Array [],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    show={true}>
    <ModalHeader
      aria-label="Close"
      bsClass="modal-header"
      closeButton={false}>
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4">
        Make a new Player
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div">
      get that body
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}>
        Cancel
      </Button>
    </ModalFooter>
  </Modal>
</ListGroupItem>
`;
